--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@zxing/library": "^0.21.3",
+    "@zxing/ngx-scanner": "^21.0.0",
     "jsqr": "^1.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
