--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME=plateforme_evenementielle
+DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=postgres123
-DB_PORT=5432
+DB_PASSWORD=pass123
 DB_HOST=localhost
+DB_PORT=5431
