--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_NAME=users
+DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=maryem222
+DB_PASSWORD=pass123
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5431
