--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,9 +27,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ./backend:/app:cached
-    command: >
-      npm install lodash@4.17.21 --prefix /app &&
-      npm run start:dev
+    command: npm run start:dev
 
   frontend:
     build: ./frontend
