--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "mysql2": "^3.16.1",
     "passport": "^0.7.0",
