--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,9 +29,7 @@ services:
       JWT_EXPIRES_IN: ${JWT_EXPIRES_IN}
     volumes:
       - ./backend:/app:cached
-    command: >
-      npm install lodash@4.17.21 --prefix /app &&
-      npm run start:dev
+    command: npm run start:dev
 
   frontend:
     build: ./frontend
